test/libyul/yulSyntaxTests/passing_builtin_with_literal_argument_into_literal_argument.yul
{
    setimmutable(0, loadimmutable("abc"), "abc")
}
// ====
// dialect: zvm
// ----
// TypeError 9114: (6-18): Function expects direct literals as arguments.
